tests/errors/prelude-shared-reserved.ari
fn main() -> i64 {
  let value: Shared[i64] = 0;
  return value;
}
